--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "styled-components": "^6.0.5",
+    "sweetalert2": "^11.7.20",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
